# Y3ProjectCode

OpenCVServer/: BallTracker.cpp  BallTracker.hpp  CMakeLists.txt  UDPCommunicator.cpp  UDPCommunicator.hpp  main.cpp
Y3GameProject/: .p4ignore  Y3GameProject.sln  Y3GameProject.uproject
Y3GameProject/Config/: DefaultEngine.ini  DefaultInput.ini
Y3GameProject/Content/: ARSessionConfig.uasset  BP_HockeyGameMode.uasset  BP_HockeyTable.uasset  BP_MRPuck.uasset  BP_TestController.uasset  BP_VRCharacter.uasset  BP_VRPuck.uasset  Bearing_Paddle_Quest.uasset  Bearing_Puck.uasset  PM_Puck.uasset  PokeAHoleInverseMaterial.uasset  PokeAHoleMaterial.uasset  TableDraft.uasset  TestMap.umap  WBP_Stats.uasset
Y3GameProject/Content/ArcadeScene/: arcade_Air_Hockey.uasset  arcade_Arcade_Machine.uasset
Y3GameProject/Content/Blueprints/: BP_AlignmentCharacter.uasset  BP_AlignmentGameMode.uasset  BP_BonusGoals.uasset  BP_BonusTime.uasset  BP_HockeyTable.uasset  BP_MRCharacter.uasset  BP_MRHockeyGameMode.uasset  BP_MRPuck.uasset  BP_PenaltyGoals.uasset  BP_TestController.uasset  BP_VRCharacter.uasset  BP_VRHockeyGameMode.uasset  BP_VRPuck.uasset
Y3GameProject/Content/FX/: BonusFX.uasset  M_Circle.uasset  M_Ring.uasset  PenaltyFX.uasset  circle-glow.uasset
Y3GameProject/Content/Maps/: AlignmentMap.umap  AlignmentMap_BuiltData.uasset  MRMap.umap  MixedRealityMap.umap  TestMap.umap  TestMap_2.umap  TestMap_BuiltData.uasset  VRMap.umap
Y3GameProject/Content/Materials/: M_Puck.uasset  M_Table.uasset  (+6 more)
Y3GameProject/Source/: Y3GameProject.Target.cs  Y3GameProjectEditor.Target.cs
(+199 files in other folders)
